--- a/new-find.html
+++ b/new-find.html
@@ -37,7 +37,7 @@
         <h1 class="screen-header__title">연예</h1>
       </header>
     </div>
-    <div class="main-screen">
+    <div class="main-screen newfind-main-screen">
       <div class="new-find__row">
         <div class="new-find__row-sub covid-level">
           <span class="new-find__row-sub__column">위기경보</span
@@ -94,7 +94,8 @@
       </div>
       <div class="new-find__row"></div>
     </div>
-    <!-- <main class="main-screen">
+
+    <main class="main-screen">
       <div class="icon-row">
         <div class="icon-row__icon">
           <i class="fas fa-qrcode"></i>
@@ -149,7 +150,7 @@
           </div>
         </div>
       </div>
-    </main> -->
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -165,7 +166,7 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html">
+          <a class="nav__link" href="new-find.html">
             <i class="fas fa-hashtag fa-2x"></i>
           </a>
         </li>
