--- a/settings.html
+++ b/settings.html
@@ -85,7 +85,7 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html">
+          <a class="nav__link" href="new-find.html">
             <i class="fas fa-hashtag fa-2x"></i>
           </a>
         </li>
